examples/service-mesh/istio/1-request-routing/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      serviceAccountName: nginx-sa
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: nginx-html-config-v1
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-html-config-v1
          configMap:
            name: nginx-html-config-v1
            items:
              - key: index.html
                path: index.html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      serviceAccountName: nginx-sa
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: nginx-html-config-v2
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-html-config-v2
          configMap:
            name: nginx-html-config-v2
            items:
              - key: index.html
                path: index.html
